--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,8 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: hsl(0, 0%, 100%);
+}
+html{
+    scroll-behavior: smooth;
 }
 
 header {
@@ -34,35 +45,109 @@ main {
 p{
     color: #ffffff;;
 }
-
+/* catalogo */
 h2 {
-    color: #ffffff;
+     color: #030303; 
+     text-align: center;
+     background-color: rgb(29, 160, 29);
+     text-transform: capitalize;
+     padding: 20px;
 }
-
-section {
+.sec{
+    height: 400px;
+    background-color: #ffffff;
+}
+.sec1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-evenly;
+}
+.sec2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-evenly;
+}
+.sec3{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-evenly;
+}
+.sec4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-evenly;
+}
+.caja {
+    height: 334px;
+    width: 300px;
+    background-color: #74bb74;
+    color: #000000;
+    text-align: center;
+    font-size: 25px;
+    border:5px solid #ffffff;
+}
+.caja1{
+    background-image:url(zapatillas/adidas.jpg);
+}
+/* section {
     margin-bottom: 20px;
     background: #2ab10fb2;
     padding: 15px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}*/
 li{
     color: #ffffff;
+}
+/* servicios */
+.accordion-header button{
+    color: green;
 }
 
 footer {
     text-align: center;
-    padding: 10px 0;
+    padding: 20px 0;
     background: #0a8a0ab2;
     color: #000000;
+    font-size: 25px;
 }
-
-footer ul {
-    list-style: none;
-    padding: 0;
+footer p {
+    margin-bottom: 20px;
 }
-
-footer ul li {
-    display: inline;
-    margin: 0 10px;
+.redes a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 50px;
+}
+.redes a:hover{
+    color: #030303;
+}
+.subir{
+    height: 40px;
+    width: 40px;
+    position: fixed;
+    right: 20px;
+    bottom: 10px;
+    background-color: #74bb74;
+    font-size: 25px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    box-shadow: 0 0 5px 5px #000000 ;
 }
